# gepetto-viewer

./: .gitignore  CMakeLists.txt
cmake-module/: qt.cmake
doc/troubleshooting/: README.md  troubleshooting.html  troubleshooting.md
include/gepetto/gui/: mainwindow.hh
include/gepetto/viewer/: node-manipulation.h  node-manipulator.h  node.h
include/gepetto/viewer/OSGManipulator/: keyboard-manipulator.h
plugins/octomap/: CMakeLists.txt  node.cc  node.hh  plugin.cc  plugin.hh
res/: images.qrc
src/: CMakeLists.txt  group-node.cpp  is-dirty-visitor.h  node-manipulation.cc  node.cpp  osgmanipulator.cpp  window-manager.cpp
src/OSGManipulator/: keyboard-manipulator.cpp
src/gui/: mainwindow.cc  mainwindow.ui
src/node-manipulation/: tab-plane-dragger.cc
